--- a/Photos/Photos/Base.lproj/Main.storyboard
+++ b/Photos/Photos/Base.lproj/Main.storyboard
@@ -98,17 +98,6 @@
                                     <constraint firstAttribute="width" constant="560" id="gAa-Wh-A89"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qwf-B9-p0n">
-                                <rect key="frame" x="28" y="495" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="BIE-0E-dt9"/>
-                                    <constraint firstAttribute="width" constant="30" id="gJB-dN-che"/>
-                                </constraints>
-                                <state key="normal" title="Like"/>
-                                <connections>
-                                    <action selector="like:" destination="3Qp-ni-IOZ" eventType="touchUpInside" id="g9j-3c-4sa"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="igL-kU-3wE">
                                 <rect key="frame" x="20" y="408" width="91" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -130,13 +119,24 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qwf-B9-p0n">
+                                <rect key="frame" x="20" y="495" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="BIE-0E-dt9"/>
+                                    <constraint firstAttribute="width" constant="30" id="gJB-dN-che"/>
+                                </constraints>
+                                <state key="normal" title="Like"/>
+                                <connections>
+                                    <action selector="like:" destination="3Qp-ni-IOZ" eventType="touchUpInside" id="g9j-3c-4sa"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="pEH-R2-x9a" secondAttribute="leading" constant="-94" id="4dh-7n-bRq"/>
-                            <constraint firstItem="7GQ-I1-WIf" firstAttribute="leading" secondItem="Qwf-B9-p0n" secondAttribute="leading" constant="-8" id="6lI-ek-RAT"/>
+                            <constraint firstItem="7GQ-I1-WIf" firstAttribute="leading" secondItem="Qwf-B9-p0n" secondAttribute="leading" id="6lI-ek-RAT"/>
                             <constraint firstItem="7GQ-I1-WIf" firstAttribute="firstBaseline" secondItem="pEH-R2-x9a" secondAttribute="firstBaseline" id="6lt-W1-5eb"/>
-                            <constraint firstItem="Qwf-B9-p0n" firstAttribute="leading" secondItem="TkS-aE-oKm" secondAttribute="leadingMargin" constant="8" id="7AU-oz-vs5"/>
+                            <constraint firstItem="Qwf-B9-p0n" firstAttribute="leading" secondItem="TkS-aE-oKm" secondAttribute="leadingMargin" id="7AU-oz-vs5"/>
                             <constraint firstItem="Cob-bG-xWg" firstAttribute="leading" secondItem="igL-kU-3wE" secondAttribute="trailing" constant="3" id="AgZ-Wi-NNG"/>
                             <constraint firstItem="igL-kU-3wE" firstAttribute="trailing" secondItem="rYY-vJ-cUR" secondAttribute="trailing" id="Ano-Gk-lU1"/>
                             <constraint firstItem="7GQ-I1-WIf" firstAttribute="baseline" secondItem="pEH-R2-x9a" secondAttribute="baseline" id="G1E-SQ-pdz"/>
